[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Barrel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Barrel.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.287586, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.21875, 2.04688 )

[node name="Barrel" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="left_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_area"]
position = Vector2( -2.90089, 0 )
shape = SubResource( 2 )

[node name="right_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_area"]
position = Vector2( 2.96875, -0.171875 )
shape = SubResource( 3 )

[connection signal="body_entered" from="left_area" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="left_area" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="right_area" to="." method="_on_right_area_body_entered"]
[connection signal="body_exited" from="right_area" to="." method="_on_right_area_body_exited"]
